# uv-structure-example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: dev-init.sh
src/example/primary/: entrypoint.py
